tests/errors/overlapping-instance/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0118]: Overlapping instance: another instance of trait `greet` for head `int` is already declared.
   │
12 │ implement greet int {
   │ ^^^^^^^^^^^^^^^^^^^^^
   ╰─𜱶 tests/errors/overlapping-instance/main.pa:12:1
